--- a/WebViewBrowser/app/src/main/res/values/strings.xml
+++ b/WebViewBrowser/app/src/main/res/values/strings.xml
@@ -15,14 +15,26 @@
     <string name="action_settings">Settings</string>
     <string name="action_view_source">View Source</string>
     <string name="action_clear_history">Clear history</string>
+    <string name="action_favorite">Favorite</string>
+    <string name="action_favorites">Favorites</string>
+    
     <string name="history_title">Browsing History</string>
     <string name="variables_title">Form Variables</string>
     <string name="credentials_title">Credentials</string>
+    <string name="favorites_title">Favorite Sites</string>
     <string name="source_code_title">HTML Source</string>
+    
     <string name="empty_history">No browsing history</string>
+    <string name="empty_favorites">No favorite sites</string>
     <string name="search_hint">Search history</string>
     <string name="dev_tools_visible">Developer Tools</string>
+    
+    <string name="added_to_favorites">Added to favorites</string>
+    <string name="removed_from_favorites">Removed from favorites</string>
+    
     <string name="confirm_clear_history">Are you sure you want to clear all browsing history?</string>
+    <string name="confirm_clear_favorites">Are you sure you want to clear all favorites?</string>
+    
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="cancel">Cancel</string>
@@ -44,4 +56,5 @@
     <string name="open">Open</string>
     <string name="copy_url">Copy URL</string>
     <string name="save_image">Save Image</string>
+    <string name="stop">Stop</string>
 </resources>
