--- a/WebViewBrowser/app/src/main/res/values/strings.xml
+++ b/WebViewBrowser/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="action_share">Share</string>
     <string name="action_settings">Settings</string>
     <string name="action_view_source">View Source</string>
+    <string name="action_console">View Console Logs</string>
     <string name="action_clear_history">Clear history</string>
     <string name="action_favorite">Favorite</string>
     <string name="action_favorites">Favorites</string>
